=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.04-dev - 

=item 1.03 - June 19, 2003

Instrumented Makefile.PL to unconditionally remove any old
pre-installed occurrences of Apache/test.pm, which has been renamed to
Apache/testold.pm in mod_perl 1.28 to avoid collisions with
Apache/Test.pm on case-insensitive systems. [Stas]

Apache::TestClient now handles correctly responses with no body and
its response header() method is no longer case-sensitive [Stas]

add skip helper shortcuts: have_min_perl_version,
have_min_module_version [Stas]

pass to 'use lib' only 'lib/' dirs that actually exist in
autogenerated t/TEST t/SMOKE and others. [Stas]

add the ASF LICENSE file to the distro [Stas]

get rid of Apache::TestTrace's dependency on Apache::TestConfig as it
creates too many circular use() problems. [Stas]

wrap blib loading in eval block (added to autogenerated files), to
prevent 'make clean' failures. [Stas]

add two more variants of each of the tracing functions. If the '_mark'
suffix is appended (e.g., 'error_mark') the trace will start with the
filename and the line number the function was called from. If the
'_sub' suffix is appended (e.g., 'error_info') the trace will start
with the name of the subroutine the function was called from. [Stas]

add support for a new env var APACHE_TEST_TRACE_LEVEL, used to
override the tracing level. It propogates the overriden (either by env
var APACHE_TEST_TRACE_LEVEL or -trace option) value to the
server-side, so we can use Apache::TestTrace in mod_perl handlers, and
be able enable/disable tracing from the commmand line. This way we
don't have to comment out debug prints. [Stas]

=item 1.02

not released

=item 1.01 - May  1, 2003

improved support for 3rd party modules test configuration setup:
automatically include 'use blib' in autogenerated t/TEST and add 'use
Apache2' in the startup file for mod_perl 2.0. [Stas]

new configuration option: -libmodperl [path/to/]mod_perl.so (so one