@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.04-dev - 
 
+Enable TransferLog in the autogenerated httpd.conf only if
+mod_log_config is available [Stas]
+
 =item 1.03 - June 19, 2003
 
 Instrumented Makefile.PL to unconditionally remove any old
